fixed alignment of table headers

--- a/src/features/invoice-details/invoice-data-table.module.scss
+++ b/src/features/invoice-details/invoice-data-table.module.scss
@@ -30,6 +30,7 @@
     thead th {
       position: sticky;
       top: 0;
+      vertical-align: middle;
     }
 
     .stickyColumn {
