--- a/src/features/invoice-details/other-cost-details-table.module.scss
+++ b/src/features/invoice-details/other-cost-details-table.module.scss
@@ -32,6 +32,7 @@
     thead th {
       position: sticky;
       top: 0;
+      vertical-align: middle;
     }
 
     .stickyColumn {
